--- a/wp-blog/src/app/chatbot/chat-dialog/chat-dialog.component.html
+++ b/wp-blog/src/app/chatbot/chat-dialog/chat-dialog.component.html
@@ -1,11 +1,39 @@
 
    
     
-     <div class="fixed-action-btn">
-    
-    
-    <button data-target="modal1" class="btn-floating btn-medium red lighten-3 pulse modal-trigger" href="#modal1"><i class="large material-icons center" >mood</i></button>
-    </div>
+
+
+<div class="fixed-action-btn">
+  
+  <div id="myDIV"> 
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+            <div *ngFor="let message of messages | async">
+          
+                <div  class="message"   [ngClass]="{ 'from': message.sentBy === 'bot',
+                'to':   message.sentBy === 'user' }">
+                  {{ message.content }}
+                </div>
+        </div>
+        <div class="card-action">
+            <div id="" class="input-field col s12">
+                <i class="material-icons prefix">textsms</i>
+                <input  [(ngModel)]="formValue" (keyup.enter)="sendMessage()"  type="text" id="autocomplete-input" class="autocomplete">
+                <label for="autocomplete-input">Autocomplete</label>
+              </div>
+        </div>
+      </div>
+</div>
+
+</div>
+<a class="btn-floating btn-large red" (click)="myFunction()"  >
+    <i class="material-icons">mood</i>
+  </a>
+
+  </div>    
+
+
+
 
     
     <div id="modal1" class=" modal">
@@ -35,11 +63,7 @@
    
    
       
-      <div id="" class="input-field col s12">
-        <i class="material-icons prefix">textsms</i>
-        <input  [(ngModel)]="formValue" (keyup.enter)="sendMessage()"  type="text" id="autocomplete-input" class="autocomplete">
-        <label for="autocomplete-input">Autocomplete</label>
-      </div>
+    
 
     </div>
     
