--- a/wp-blog/src/app/chatbot/chat-dialog/chat-dialog.component.html
+++ b/wp-blog/src/app/chatbot/chat-dialog/chat-dialog.component.html
@@ -3,9 +3,8 @@
     
 
 
-<div class="fixed-action-btn">
-  
-  <div id="myDIV"> 
+<div class="fixed-action-btn">  
+  <!-- <div id="myDIV"> 
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
             <div *ngFor="let message of messages | async">
@@ -23,71 +22,51 @@
               </div>
         </div>
       </div>
+</div> -->
+<button data-target="modal1" class="btn-floating btn-medium red lighten-3 pulse modal-trigger" href="#modal1"><i class="large material-icons center" >mood</i></button>
+
+
+
 </div>
-
-</div>
-<a class="btn-floating btn-large red" (click)="myFunction()"  >
-    <i class="material-icons">mood</i>
-  </a>
-
-  </div>    
-
-
-
-
-    
-    <div id="modal1" class=" modal">
-      
-
-
-         <div id="modal2" class="chat-box row">
-     
-       
-        <div *ngFor="let message of messages | async">
-          
-          <div  class="message"   [ngClass]="{ 'from': message.sentBy === 'bot',
-          'to':   message.sentBy === 'user' }">
-            {{ message.content }}
-          </div>
-   
-    
-
-
-         </div>
-
-      
-         
-     
-        
-      </div>
-   
-   
-      
-    
-
-    </div>
-    
-
-
-
-      
-
-
-
-
-     
-         
-
-        
-
-    
-    
-       
-     
-
-      
-            
-            
-          
-    
-
+<div id="modal1" class=" modal">
+		
+		  <div class="chat-top">
+			  <div class="chatadminimg">
+				  
+			  </div>
+			  <h2>John Doe</h2>
+			  <a href="javascript:void(0)"><i class="material-icons ">keyboard_arrow_down</i></a>
+		  </div>
+  
+		   <div id="modal2" class="chat-box row">
+	   
+		 
+		  <div *ngFor="let message of messages | async">
+			
+			<div  class="message"   [ngClass]="{ 'from': message.sentBy === 'bot',
+			'to':   message.sentBy === 'user' }">
+			  {{ message.content }}
+			</div>
+	 
+	  
+  
+  
+		   </div>
+  
+		
+		   
+	   
+		  
+		</div>
+	 
+	 
+		
+		<div id="" class="input-field col s12">
+  <!--        <i class="material-icons prefix">textsms</i>-->
+		  <i class="material-icons prefix">send</i>
+		  <input  [(ngModel)]="formValue" (keyup.enter)="sendMessage()"  type="text" id="autocomplete-input" class="autocomplete">
+		  <label for="autocomplete-input">Autocomplete</label>
+		</div>
+  
+	  </div>
+ 
